--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <b>Invited talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">Workshop on Hot Issues in Security Principles and Trust (HotSpot)</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
+      <li><b>Recent:</b> <b>Invited Keynote Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
       <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
       <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
     </ul>
@@ -923,14 +923,14 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>The Next 700 Relational Program Logics</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> Everest All Hands: <a href="talks/2019-10-11-The-Next-700-Relational-Program-Logics-Everest-Paris.pdf">slides</a> (2019-10-11)</li>
+      <li>Everest All Hands: <a href="talks/2019-10-11-The-Next-700-Relational-Program-Logics-Everest-Paris.pdf">slides</a> (2019-10-11)</li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Dijkstra Monads for All</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> Everest All Hands: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
+      <li>Everest All Hands: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
     </ul>
   </li>
 
@@ -1042,11 +1042,11 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b>Recent:</b> <b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
