--- a/group.html
+++ b/group.html
@@ -96,7 +96,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]<br/>
-[<b>Now Formal Verification Engineer/Researcher in the Dresden Research Center of Huawei</b>]
+[<b>Now Formal Verification Researcher in the Dresden Research Center of Huawei</b>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b></li>
