--- a/group.html
+++ b/group.html
@@ -124,7 +124,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>
   <ul>
     <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> then at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2019-10 to 2021-10:<br/>
-    <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a>
+    <a href="https://arxiv.org/abs/2110.01439">SecurePtrs</a> and <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
