--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations, CSF </a> (Test-of-Time Awards Chair)</b>
+  <ul>
+  <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
+  <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
+  </ul>
+  </li>
+
   <!-- <li style="margin-bottom: 1ex;"><b>Open position: -->
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
@@ -936,7 +943,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://gtmfsec.irisa.fr/">Formal Methods Working Group of GDR Security</a>: <a href="talks/2020-01-30-When-Good-Components-Go-Bad-GDR-Security-Paris.pdf">slides</a> (2020-01-30)</li>
+      <li><b>Recent:</b> <a href="https://gtmfs2020.github.io/programme.html">2020 Meeting</a> of the <a href="http://gtmfsec.irisa.fr/">Formal Methods Working Group of GDR Security</a>: <a href="talks/2020-01-30-When-Good-Components-Go-Bad-GDR-Security-Paris.pdf">slides</a> (2020-01-30)</li>
       <li><a href="https://www.cse.chalmers.se/research/group/security/talk/css-talk27/">Chalmers Security Seminar</a>: <a href="talks/2019-12-05-When-Good-Components-Go-Bad-Chalmers.pdf">slides</a> (2019-12-05)</li>
       <li><a href="https://memento.epfl.ch/event/ic-colloquium-when-good-components-go-bad-formal-2/">EPFL IC Colloquium</a>: <a href="talks/2019-09-26-When-Good-Components-Go-Bad-EPFL.pdf">slides</a> (2019-09-26)</li>
       <li>MPI-SWS, Saarbrücken: <a href="talks/2019-05-23-When-Good-Components-Go-Bad-Saarbruecken.pdf">slides</a> (2019-05-23)</li>
