--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations, CSF </a> (Test-of-Time Awards Chair</b> for 2023 and 2024)
+  <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations, CSF </a> (Test-of-Time Awards Chair</b> in 2023 and 2024)
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
