--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations, CSF</a> (Test-of-Time Awards Chair</b> in 2023 and 2024)
+  <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations</a>, CSF (Test-of-Time Awards Chair</b> in 2023 and 2024)
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
@@ -664,7 +664,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Deepak Garg, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
-    To appear in <a href="https://www.ieee-security.org/TC/CSF2022/">35th
+    In <a href="https://www.ieee-security.org/TC/CSF2022/">35th
     IEEE Computer Security Foundations Symposium (CSF)</a>.
     August 2022.
     <ul style="font-size: small">
