--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at
   MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
 
+
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Co-Organizer)
   <!-- <ul> --> 
   <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
@@ -895,6 +896,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Formally Verifying a Secure Compilation Chain for Unsafe C Components</em></a>
 
     <ul style="font-size: small">
+      <li><b>Upcoming:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a><!-- : <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> --> (2023-03-10)</li>
       <li><b>Recent:</b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
     </ul>
   </li>
