--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Formally Verifying a Secure Compilation Chain for Unsafe C Components</em></a>
+  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe C Compartments</em></a>
 
     <ul style="font-size: small">
       <li><b>Upcoming:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a><!-- : <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> --> (2023-03-10)</li>
