--- a/index.html
+++ b/index.html
@@ -901,10 +901,11 @@ I am very fortunate to work with a group of outstanding students and starting re
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP 2021</em></a>
+  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP</em></a>
 
     <ul style="font-size: small">
       <li>Chairs' Report: <a href="https://popl21.sigplan.org/details/CPP-2021/27/Chairs-report-and-community-meeting">slides and video</a> (2021-01-19)</li>
+      <li>Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
     </ul>
   </li>
 
@@ -921,13 +922,6 @@ I am very fortunate to work with a group of outstanding students and starting re
 
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP 2020</em></a>
-
-    <ul style="font-size: small">
-      <li>Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
     </ul>
   </li>
 
