--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ could contribute:
   MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Co-Organizer)
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Organizer)
   <!-- <ul> --> 
   <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
   <!-- </ul> -->
@@ -179,7 +179,7 @@ could contribute:
   <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs, CPP</a> <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs, CPP</a> <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Chair)</b>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a></b> (PC member)
@@ -263,7 +263,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><a href="https://popl23.sigplan.org/series/POPL">
     <b>Principles of Programming Languages</b>, POPL 2018 & 2019</a>
-    (Artifact Evaluation Co-Chair)
+    (Artifact Evaluation Chair)
   <!-- <ul> -->
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <!-- <li>Submission deadline: 7 July 2017</li> -->
