--- a/index.html
+++ b/index.html
@@ -896,8 +896,8 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe C Compartments</em></a>
 
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a><!-- : <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> --> (2023-03-10)</li>
-      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
+      <li><b>Recent:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
+      <li><b></b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
     </ul>
   </li>
 
