--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><a href="https://popl23.sigplan.org/series/POPL">
+    <b>Principles of Programming Languages, POPL 2024</b></a>
+    (PC Member)
+  <ul>
+  <!-- <li>Abstract deadline: 1 July 2017</li> -->
+  <li>Submission deadline: 11 July 2013</li>
+  <li>Conference: 17-19 January 2024, London, UK</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations</a>, CSF (Test-of-Time Awards Chair</b> in 2023 and 2024)
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
