--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <li>Submission deadline: 11 July 2013</li>
-  <li>Conference: 17-19 January 2024, London, UK</li>
+  <li>Symposium: 17-19 January 2024, London, UK</li>
   </ul>
   </li>
 
