--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, graduated PhD student I co-supervised at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, started as Assistant Prof. at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in Jan 2023.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at
   MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
@@ -566,6 +566,8 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maximilian Wuttke</a> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a> (Research Intern, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
