--- a/index.html
+++ b/index.html
@@ -598,6 +598,30 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Philipp G. Haselwarter, 
+    Exequiel Rivas, 
+    Antoine Van Muylder, 
+    Théo Winterhalter, 
+    Carmine Abate,
+    Nikolaj Sidorenco,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Kenji Maillard, and
+    Bas Spitters.
+    <b><a href="https://eprint.iacr.org/2021/397/20210526:113037">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
+    Accepted in <a href="https://dl.acm.org/journal/toplas">ACM Transactions on Programming Languages and Systems (TOPLAS)</a>. To appear. January 2023.
+    <ul style="font-size: small">
+      <li><a href="https://eprint.iacr.org/2021/397/20210526:113037">Conference version</a> won <b>Distinguished Paper Award</b>
+          at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></li>
+      <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
+      <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
+          <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
+          <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>; and
+          <a href="https://youtu.be/FdMRB1mnyUA">TYPES 2021 presentation</a>
+      </li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     C&#259;t&#259;lin Hri&#539;cu,
     Guido Martínez,
@@ -682,30 +706,6 @@ I am very fortunate to work with a group of outstanding students and starting re
     August 2022.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/SecurePtrs">Coq development</a></li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Carmine Abate, 
-    Philipp G. Haselwarter, 
-    Exequiel Rivas, 
-    Antoine Van Muylder, 
-    Théo Winterhalter, 
-    C&#259;t&#259;lin Hri&#539;cu,
-    Kenji Maillard, and
-    Bas Spitters.
-    <b><a href="https://eprint.iacr.org/2021/397/20210526:113037">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
-    In <a href="https://www.ieee-security.org/TC/CSF2021/">34th
-    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 608--622. June 2021.
-    <b>Distinguished Paper Award</b>.
-    <ul style="font-size: small">
-      <li><a href="https://eprint.iacr.org/2021/397">Improved and extended version</a></li>
-      <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
-      <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
-          <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
-          <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>; and
-          <a href="https://youtu.be/FdMRB1mnyUA">TYPES 2021 presentation</a>
-      </li>
     </ul>
   </li>
 
