--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a> -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="https://web.archive.org/web/20210618030150/http://mathinfoly.org/">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a> -->
   <!-- <\!-- <ul> -\-> -->
   <!-- <\!-- <\\!-- <li>Application deadline: 30 June 2019</li> -\\-> -\-> -->
   <!-- <\!-- <li>School: 24-31 August 2019 at INSA, Lyon, France</li> -\-> -->
