--- a/group.html
+++ b/group.html
@@ -54,6 +54,8 @@
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maximilian Wuttke</a> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
   <ul>
     <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
@@ -78,6 +80,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
       <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation Despite Dynamic Compromise</a></li>
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a> (Research Intern, MPI-SP)</li>
 
 </ul>
 
