--- a/group.html
+++ b/group.html
@@ -54,7 +54,7 @@
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maximilian Wuttke</a> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://people.mpi-sws.org/~wuttke/">Maximilian Wuttke</a></b> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
   <ul>
@@ -81,7 +81,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a> (Research Intern, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a></b> (Research Intern, MPI-SP)</li>
 
 </ul>
 
