--- a/publications.html
+++ b/publications.html
@@ -719,7 +719,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Théo Winterhalter,
     C&#259;t&#259;lin Hri&#539;cu, and
     Bas Spitters.
-    <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>. Draft. Submitted to CSF'23. February 2023.
+    <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
+    Draft. Submitted to CSF'23. February 2023.
     <!-- <ul style="font-size: small"> -->
     <!--   <li><a href="">Coq development</a></li> -->
     <!-- </ul> -->
