--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a> (PhD Student, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
