--- a/group.html
+++ b/group.html
@@ -67,7 +67,7 @@
 [MSc student at 
 PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]
 [PhD student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
-[<b>Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a></b>]
+[<b>Now Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a></b>]
 </div>
   </li>
 
