--- a/index.html
+++ b/index.html
@@ -141,10 +141,13 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://csf2023.ieee-security.org">Computer Security Foundations</a>, CSF (Test-of-Time Awards Chair</b> in 2023 and 2024)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF (Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and 2024; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and 2024</b>)
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
+  <!-- <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
+  <!-- <li>Conference (CSF 2020): June 2020, <\!--strike>Boston, MA, USA</strike-\-> Online</li> -->
+  <!-- <li>Conference (CSF 2021): 22-25 June 2021, <\!-- Dubrovnik, Croatia -\-> Online</li> -->
   </ul>
   </li>
 
@@ -190,14 +193,6 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs, CPP</a> <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Chair)</b>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a></b> (PC member)
-  <ul>
-  <!-- <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
-  <!-- <li>Conference (CSF 2020): June 2020, <\!--strike>Boston, MA, USA</strike-\-> Online</li> -->
-  <!-- <li>Conference (CSF 2021): 22-25 June 2021, <\!-- Dubrovnik, Croatia -\-> Online</li> -->
-  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
