--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://popl23.sigplan.org/series/POPL">
-    <b>Principles of Programming Languages, POPL 2024</b></a>
-    (PC Member)
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://popl23.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
+    (PC Member in <a href="https://popl17.sigplan.org/">2017</a> and 2024)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <li>Submission deadline: 11 July 2013</li>
