--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://popl23.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
-    (PC Member in <a href="https://popl17.sigplan.org/">2017</a> and 2024)
+    (Artifact Evaluation Chair in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
+     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and 2024)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <li>Submission deadline: 11 July 2013</li>
@@ -265,17 +266,6 @@ could contribute:
   <!--   <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a> -->
   <!--    (<a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">Thesis</a>) -->
   <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><a href="https://popl23.sigplan.org/series/POPL">
-    <b>Principles of Programming Languages</b>, POPL 2018 & 2019</a>
-    (Artifact Evaluation Chair)
-  <!-- <ul> -->
-  <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <!-- <li>Submission deadline: 7 July 2017</li> -->
-  <!-- 8-13 January 2018, Los Angeles, USA https://popl18.sigplan.org/ -->
-  <!-- <li>Conference: 13-19 January 2019, Lisbon, Portugal</li> -->
-  <!-- </ul> -->
-  </li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference Computer and Communications Security, CCS 2018</a> (PC member) -->
   <!-- <\!-- <ul> -\-> -->
