--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://popl23.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
-    (Artifact Evaluation Chair in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
+    (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
      also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and 2024)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
@@ -142,7 +142,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF (Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and 2024; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and 2024</b>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and 2024;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and 2024)
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
@@ -156,7 +156,10 @@ could contribute:
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a></b>, CPP (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
+  </li>
+
+
   <ul>
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
@@ -165,7 +168,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/prisc-2023"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> since 2019,<br/> also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
   <!-- <li>Submission deadline: 27 October 2022</li> -->
   <!-- <li>Early registration deadline: 16 December 2022</li> -->
@@ -191,9 +194,6 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></b> for<br/>
   <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs, CPP</a> <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Chair)</b>
   </li>
 
   <li style="margin-bottom: 1ex;">
