--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and 2024;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and 2024)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
