--- a/group.html
+++ b/group.html
@@ -374,7 +374,7 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> MSc student]
 [Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
 [Then PostDoc at <a href="http://www.ccs.neu.edu/">Northeastern University</a>]
-[Now at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]
+[Now Formal Verification Research Engineer at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/nickgiannarakis">Nick Giannarakis</a></b>
