--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ could contribute:
   <li style="margin-bottom: 1ex;">
     <b><a href="https://popl23.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
     (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
-     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and 2024)
+     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <li>Submission deadline: 11 July 2013</li>
