--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@ could contribute:
   <ul>
   <!-- <li><b>Submission deadlines: <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
-  <!-- <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
-  <!-- <li>Conference (CSF 2020): June 2020, <\!--strike>Boston, MA, USA</strike-\-> Online</li> -->
-  <!-- <li>Conference (CSF 2021): 22-25 June 2021, <\!-- Dubrovnik, Croatia -\-> Online</li> -->
+  <li><b>Submission deadlines (CSF 2024): 15 May 2023, 30 September 2023, and 3 February 2024</b></li>
+  <li>Symposium (CSF 2024): 8-12 July 2024, Enschede, The Netherlands </li>
   </ul>
   </li>
 
