--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu,
     Kenji Maillard, and
     Bas Spitters.
-    <b><a href="https://eprint.iacr.org/2021/397/20210526:113037">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
+    <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
     Accepted in <a href="https://dl.acm.org/journal/toplas">ACM Transactions on Programming Languages and Systems (TOPLAS)</a>. To appear. April 2023.
     <ul style="font-size: small">
       <li><a href="https://eprint.iacr.org/2021/397/20210526:113037">Conference version</a> won <b>Distinguished Paper Award</b>
