--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ could contribute:
   <!--        for the best ETAPS 2020 paper in theoretical computer science for -->
   <!--   <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b></li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a> -->
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a> -->
   <!-- <ul> -->
   <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
   <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
@@ -247,14 +247,14 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="https://web.archive.org/web/20210618030150/http://mathinfoly.org/">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a> -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="https://web.archive.org/web/20210618030150/http://mathinfoly.org/">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a> -->
   <!-- <\!-- <ul> -\-> -->
   <!-- <\!-- <\\!-- <li>Application deadline: 30 June 2019</li> -\\-> -\-> -->
   <!-- <\!-- <li>School: 24-31 August 2019 at INSA, Lyon, France</li> -\-> -->
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a> -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="teaching/vtsa2019/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a> -->
   <!-- <\!-- <ul> -\-> -->
   <!-- <\!-- <\\!-- <li>Application deadline: 17 May 2019</li> -\\-> -\-> -->
   <!-- <\!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -\-> -->
@@ -763,6 +763,15 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
+    </ul>
+      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe C Compartments</em></a>
 
     <ul style="font-size: small">
@@ -785,13 +794,6 @@ I am very fortunate to work with a group of outstanding students and starting re
       <li><b>Recent:</b> <b>Invited Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
       <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
       <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
-
-    <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
     </ul>
   </li>
 
@@ -917,11 +919,10 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="">Ruhr University Bochum</a>, 6 March--13 July, 2023</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
+  <li style="margin-bottom: 1ex;"><b><a href="teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
   </li>
 
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
+  <li style="margin-bottom: 1ex;"><b><a href="teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
