--- a/index.html
+++ b/index.html
@@ -766,8 +766,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
-    </ul>
+      <li><b>Recent:</b> <a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
       <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
     </ul>
   </li>
