--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://gtmfs2020.github.io/programme.html">2020 Meeting</a> of the <a href="http://gtmfsec.irisa.fr/">Formal Methods Working Group of GDR Security</a>: <a href="talks/2020-01-30-When-Good-Components-Go-Bad-GDR-Security-Paris.pdf">slides</a> (2020-01-30)</li>
+      <li><a href="https://gtmfs2020.github.io/programme.html">2020 Meeting</a> of the <a href="http://gtmfsec.irisa.fr/">Formal Methods Working Group of GDR Security</a>: <a href="talks/2020-01-30-When-Good-Components-Go-Bad-GDR-Security-Paris.pdf">slides</a> (2020-01-30)</li>
       <li><a href="https://www.cse.chalmers.se/research/group/security/talk/css-talk27/">Chalmers Security Seminar</a>: <a href="talks/2019-12-05-When-Good-Components-Go-Bad-Chalmers.pdf">slides</a> (2019-12-05)</li>
       <li><a href="https://memento.epfl.ch/event/ic-colloquium-when-good-components-go-bad-formal-2/">EPFL IC Colloquium</a>: <a href="talks/2019-09-26-When-Good-Components-Go-Bad-EPFL.pdf">slides</a> (2019-09-26)</li>
       <li>MPI-SWS, Saarbrücken: <a href="talks/2019-05-23-When-Good-Components-Go-Bad-Saarbruecken.pdf">slides</a> (2019-05-23)</li>
