--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="">Ruhr University Bochum</a>, 6 March--13 July, 2023</a>
+  <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="">Ruhr University Bochum</a>, 6 March--13 July, 2023</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
