--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ could contribute:
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a></b>, CPP (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
   </li>
 
 
