--- a/index.html
+++ b/index.html
@@ -155,19 +155,16 @@ could contribute:
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
-  </li>
-
-
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl24.sigplan.org/series/CPP"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
   <ul>
-  <!-- <li>Abstract deadline: 14 September 2022</li> -->
-  <!-- <li>Submission deadline: 21 September 2022</li> -->
+  <li>Abstract deadline: 12 September 2023</li>
+  <li>Submission deadline: 19 September 2023</li>
   <!-- <li>Early registration deadline: 16 December 2022</li> -->
-  <!-- <li>Conference: 16-17 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li> -->
+  <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> since 2019,<br/> also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
   <!-- <li>Submission deadline: 27 October 2022</li> -->
   <!-- <li>Early registration deadline: 16 December 2022</li> -->
