--- a/index.html
+++ b/index.html
@@ -548,6 +548,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://elefthei.github.io">Eleftherios Ioannidis</a> (Research Intern, MPI-SP)</li>
+
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a> (Research Intern, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
