--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://elefthei.github.io">Eleftherios Ioannidis</a> (Research Intern, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://elefthei.github.io">Eleftherios (Lef) Ioannidis</a> (Research Intern, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a> (Research Intern, MPI-SP)</li>
 
