--- a/group.html
+++ b/group.html
@@ -93,7 +93,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>
   <ul>
     <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-06 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04): 
-    <a href="">A Formal Framework for Correct and Secure Compilation</a></li>
+    <a href="https://hss-opus.ub.ruhr-uni-bochum.de/opus4/frontdoor/index/index/docId/9870">A Formal Framework for Correct and Secure Compilation</a></li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05:<br/>
     <a href="https://arxiv.org/abs/1807.04603">Robust Property Preservation for Secure Compilation</a></li>
   </ul>
