--- a/group.html
+++ b/group.html
@@ -90,7 +90,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/carmine-abate-676136213/">Carmine Abate</a></b>
   <ul>
     <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-06 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04): 
     <a href="https://hss-opus.ub.ruhr-uni-bochum.de/opus4/frontdoor/index/index/docId/9870">A Formal Framework for Correct and Secure Compilation</a></li>
@@ -101,6 +101,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 [MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]<br/>
 [<b>Now Formal Verification Researcher in the Dresden Research Center of Huawei</b>]
+<!-- https://dblp.org/pers/hd/a/Abate:Carmine -->
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b></li>
