--- a/group.html
+++ b/group.html
@@ -122,7 +122,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [PhD Student at Aarhus University]
+  [PhD Student at Aarhus University] [Now PostDoc at MPI-SWS]
   </div>
   </li>
 
