--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
-  <li>Symposium (CSF 2023): 10-13 July 2023, Dubrovnik, Croatia</li>
-  <li>Submission deadlines (CSF 2024): <del>15 May 2023</del>, <b>30 Sept 2023, and 3 Feb 2024</b></li>
-  <li>Symposium (CSF 2024): 8-12 July 2024, Enschede, The Netherlands </li>
+  <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li>
+  <li>CSF 2024 Submission deadlines: <del>15 May 2023</del>, <b>30 Sept 2023, and 3 Feb 2024</b></li>
+  <li>CSF 2023 Symposium: 8-12 July 2024, Enschede, The Netherlands </li>
   </ul>
   </li>
 
