--- a/index.html
+++ b/index.html
@@ -622,7 +622,8 @@ I am very fortunate to work with a group of outstanding students and starting re
     Kenji Maillard, and
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
-    Accepted in <a href="https://dl.acm.org/journal/toplas">ACM Transactions on Programming Languages and Systems (TOPLAS)</a>. To appear. April 2023.
+    In <a href="https://dl.acm.org/journal/toplas">ACM Transactions on Programming Languages and Systems (TOPLAS)</a>. 
+    Volume 45, Issue 3, July 2023.
     <ul style="font-size: small">
       <li><a href="https://eprint.iacr.org/2021/397/20210526:113037">Conference version</a> won <b>Distinguished Paper Award</b>
           at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></li>
@@ -767,7 +768,8 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
+      <li><a href="https://casa.rub.de/en/events/casa-summer-school">CASA Summer School 2023</a>: <a href="talks/2023-08-14-CASA-Summer-School.pdf">slides</a> (2023-08-14)</li>
+      <li><a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
       <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
     </ul>
   </li>
