--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ could contribute:
      also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <li>Submission deadline: 11 July 2013</li>
+  <!-- <li>Submission deadline: 11 July 2013</li> -->
   <li>Symposium: 17-19 January 2024, London, UK</li>
   </ul>
   </li>
@@ -145,7 +145,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
-  <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li>
+  <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
   <li>CSF 2024 Submission deadlines: <del>15 May 2023</del>, <b>30 Sept 2023, and 3 Feb 2024</b></li>
   <li>CSF 2023 Symposium: 8-12 July 2024, Enschede, The Netherlands </li>
   </ul>
@@ -704,7 +704,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
     In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
-    <b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
+    <b>Nominated for <a href="https://etaps.org/awards/best-paper/">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
     </ul>
