--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="">Ruhr University Bochum</a>, October 2023--February 2023</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="">Ruhr University Bochum</a>, October 2023--February 2023</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="">Ruhr University Bochum</a>, March--July 2023</a>
