--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl24.sigplan.org/series/CPP"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
   <ul>
-  <li>Abstract deadline: 12 September 2023</li>
-  <li>Submission deadline: 19 September 2023</li>
+  <!-- <li>Abstract deadline: 12 September 2023</li> -->
+  <!-- <li>Submission deadline: 19 September 2023</li> -->
   <!-- <li>Early registration deadline: 16 December 2022</li> -->
   <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li>
   </ul>
