--- a/group.html
+++ b/group.html
@@ -81,14 +81,34 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/dongjae.lee">Dongjae Lee</a></b> (Research Intern, MPI-SP)</li>
-
 </ul>
 
 
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2022-08:<br/>
+    Back-Translation Proof for Formally Secure Compilation of Compartmentalized C Programs
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc Student at Seoul National University, South Korea] <!-- [Now ? at ??] -->
+  </div>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://elefthei.github.io">Eleftherios (Lef) Ioannidis</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-07 to 2023-09:<br/>
+    Formal Verification of Distributed Systems
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [PhD Student at University of Pennsylvania]
+  </div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/carmine-abate-676136213/">Carmine Abate</a></b>
   <ul>
